# internal/controller/account/login_controller.go
@@ -13,6 +13,30 @@ type cUserLogin struct{}
 
 var Login = new(cUserLogin)
 
+// Verify OTP Login By User
+// @Summary      Verify OTP Login By User
+// @Description  Verify OTP Login By User
+// @Tags         account management
+// @Accept       json
+// @Produce      json
+// @Param        payload body model.VerifyInput true "payload"
+// @Success      200  {object} 	response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/verify_account [post]
+func (c *cUserLogin) VerifyOTP(ctx *gin.Context) {
+	var params model.VerifyInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+	result, err := service.UserLogin().VerifyOTP(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrInvalidOTP, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, response.ErrCodeSuccess, result)
+}
+
 func (c *cUserLogin) Login(ctx *gin.Context) {
 	// Implement logic for login
 
@@ -24,6 +48,16 @@ func (c *cUserLogin) Login(ctx *gin.Context) {
 	response.SuccessResponse(ctx, response.ErrCodeSuccess, nil)
 }
 
+// User Registration documentation
+// @Summary      User Registration
+// @Description  When user is registered send otp to end
+// @Tags         account management
+// @Accept       json
+// @Produce      json
+// @Param        payload body model.RegisterInput true "payload"
+// @Success      200  {object} 	response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/register [post]
 func (c *cUserLogin) Register(ctx *gin.Context) {
 	var params model.RegisterInput
 	if err := ctx.ShouldBindJSON(&params); err != nil {
